<resources>
    <string name="app_name">Grocery</string>
    <string name="welcome_to_grocery_app">Welcome to Grocery App</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="send_reminder">Send Reminder</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="cancel">Cancel</string>
    <string name="enter_item_details">Enter Item Details</string>
    <string name="add">Add</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="total">Total:</string>
    <string name="amount">Amount</string>
</resources>