<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200">
        <TextView
            android:id="@+id/idTVHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/enter_item_details"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/idTVHeading"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_name"
                android:padding="5dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_quantity"
                android:padding="5dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditItemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_price"
                android:padding="5dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:weightSum="2"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/idBtnCancel"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/idBtnAdd"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>